add database dump module

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>小牛资讯</title>
-  <meta name="keywords" content="资讯 新闻 科技 文化">
-  <meta name="description" content="小牛资讯新闻网站">
+  <title>小牛新闻系统</title>
+  <meta name="keywords" content="新闻系统">
+  <meta name="description" content="小牛新闻系统">
   <link rel="stylesheet" href="/Public/css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="/Public/css/home/main.css" type="text/css" />
 </head>
@@ -19,7 +19,7 @@
       </div>
       <ul class="nav navbar-nav navbar-left">
         <li><a href="/" class="curr">首页</a></li>
-        <li><a href="/index.php?c=cat&id=3" >体育</a></li><li><a href="/index.php?c=cat&id=12" >新闻</a></li><li><a href="/index.php?c=cat&id=8" >科技</a></li>      </ul>
+        <li><a href="/index.php?c=cat&id=12" >新闻</a></li><li><a href="/index.php?c=cat&id=3" >体育</a></li><li><a href="/index.php?c=cat&id=8" >科技</a></li>      </ul>
     </div>
   </div>
 </header>
@@ -29,14 +29,15 @@
       <div class="col-sm-9 col-md-9">
         <div class="banner">
           <div class="banner-left">
-            <a target="_blank" href="/index.php?c=detail&id=25"><img width="670px" height="360px" src="/upload/2016/09/02/57c8ec26a037a.jpg" alt=""></a>
+            <div class="banner-info"><span>阅读数</span><i class="news_count node-21"></i></div>
+            <a target="_blank" href="/index.php?c=detail&id=21"><img width="670px" height="360px" src="/upload/2016/03/13/56e519a185c93.png" alt=""></a>
           </div>
           <div class="banner-right">
             <ul>
               <li>
                 <a target="_blank" href="/index.php?c=detail&id=22"></a><img width="150" height="113" src="/upload/2016/03/13/56e51b6ac8ce2.jpg" alt="李克强让部长们当第一新闻发言人">
               </li><li>
-                <a target="_blank" href="/index.php?c=detail&id=0"></a><img width="150" height="113" src="" alt="rrr333hh454">
+                <a target="_blank" href="/index.php?c=detail&id=23"></a><img width="150" height="113" src="/upload/2016/03/13/56e51cbd34470.png" alt="重庆美女球迷争芳斗艳">
               </li><li>
                 <a target="_blank" href="/index.php?c=detail&id=24"></a><img width="150" height="113" src="/upload/2016/03/13/56e51fc82b13a.png" alt="中超-汪嵩世界波制胜 富力客场1-0力擒泰达">
               </li>            </ul>
@@ -44,31 +45,31 @@
         </div>
         <div class="news-list">
           <dl>
+            <dt><a target="_blank" href="/index.php?c=detail&id=26">ttt</a></dt>
+            <dd class="news-img">
+              <a target="_blank" href="/index.php?c=detail&id=26"><img src="/upload/2016/09/02/57c9993e3130c.jpg" alt="" width="189px" height="189px"></a>
+            </dd>
+            <dd class="news-intro">ttt            </dd>
+            <dd class="news-info">
+              tt <span>2016-09-02 23:22:49</span> 阅读(<i news-id="26" class="news_count node-26">1</i>)
+            </dd>
+          </dl><dl>
             <dt><a target="_blank" href="/index.php?c=detail&id=23">重庆美女球迷争芳斗艳</a></dt>
             <dd class="news-img">
               <a target="_blank" href="/index.php?c=detail&id=23"><img src="/upload/2016/03/13/56e51cbd34470.png" alt="" width="189px" height="189px"></a>
             </dd>
             <dd class="news-intro">重庆美女球迷争芳斗艳            </dd>
             <dd class="news-info">
-              重庆美女 球迷 争芳斗艳 <span>2016-03-13 15:54:40</span> 阅读(<i news-id="23" class="news_count node-23">12</i>)
+              重庆美女 球迷 争芳斗艳 <span>2016-03-13 15:54:40</span> 阅读(<i news-id="23" class="news_count node-23">10</i>)
             </dd>
           </dl><dl>
-            <dt><a target="_blank" href="/index.php?c=detail&id=27">苹果昨晨发布iPhone7 </a></dt>
+            <dt><a target="_blank" href="/index.php?c=detail&id=25">sssss</a></dt>
             <dd class="news-img">
-              <a target="_blank" href="/index.php?c=detail&id=27"><img src="/upload/2016/09/09/57d221b490f56.jpg" alt="" width="189px" height="189px"></a>
+              <a target="_blank" href="/index.php?c=detail&id=25"><img src="/upload/2016/09/02/57c994cb63e3d.jpg" alt="" width="189px" height="189px"></a>
             </dd>
-            <dd class="news-intro">苹果昨晨发布iPhone7             </dd>
+            <dd class="news-intro">test            </dd>
             <dd class="news-info">
-              苹果 iphone7 <span>2016-09-09 10:43:57</span> 阅读(<i news-id="27" class="news_count node-27">6</i>)
-            </dd>
-          </dl><dl>
-            <dt><a target="_blank" href="/index.php?c=detail&id=25">s</a></dt>
-            <dd class="news-img">
-              <a target="_blank" href="/index.php?c=detail&id=25"><img src="/upload/2016/09/08/57d1205b5b8d8.jpg" alt="" width="189px" height="189px"></a>
-            </dd>
-            <dd class="news-intro">s            </dd>
-            <dd class="news-info">
-              ssss <span>2016-09-02 11:05:14</span> 阅读(<i news-id="25" class="news_count node-25">1</i>)
+              test <span>2016-09-02 23:03:55</span> 阅读(<i news-id="25" class="news_count node-25">4</i>)
             </dd>
           </dl><dl>
             <dt><a target="_blank" href="/index.php?c=detail&id=24">中超-汪嵩世界波制胜 富力客场1-0力擒泰达</a></dt>
@@ -77,7 +78,7 @@
             </dd>
             <dd class="news-intro">中超-汪嵩世界波制胜 富力客场1-0力擒泰达            </dd>
             <dd class="news-info">
-              中超 汪嵩世界波  富力客场 1-0力擒泰达 <span>2016-03-13 16:07:40</span> 阅读(<i news-id="24" class="news_count node-24">14</i>)
+              中超 汪嵩世界波  富力客场 1-0力擒泰达 <span>2016-03-13 16:07:40</span> 阅读(<i news-id="24" class="news_count node-24">15</i>)
             </dd>
           </dl><dl>
             <dt><a target="_blank" href="/index.php?c=detail&id=22">李克强让部长们当第一新闻发言人</a></dt>
@@ -86,7 +87,7 @@
             </dd>
             <dd class="news-intro">部长直接面对媒体回应关切，还能直接读到民情民生民意，而不是看别人的舆情汇报。            </dd>
             <dd class="news-info">
-              李克强  新闻发言人 <span>2016-03-13 15:49:22</span> 阅读(<i news-id="22" class="news_count node-22">21</i>)
+              李克强  新闻发言人 <span>2016-03-13 15:49:22</span> 阅读(<i news-id="22" class="news_count node-22">20</i>)
             </dd>
           </dl><dl>
             <dt><a target="_blank" href="/index.php?c=detail&id=21">习近平今日下午出席解放军代表团全体会议</a></dt>
@@ -117,15 +118,15 @@
               </li><li class="num4 curr">
         <a target="_blank" href="/index.php?c=detail&id=23">重庆美女球迷争芳斗艳</a>
               </li><li class="num5 curr">
-        <a target="_blank" href="/index.php?c=detail&id=27">宁波市民今天可预购</a>
+        <a target="_blank" href="/index.php?c=detail&id=25">test</a>
               </li><li class="num6 curr">
-        <a target="_blank" href="/index.php?c=detail&id=25">s</a>
+        <a target="_blank" href="/index.php?c=detail&id=26">tttt</a>
               </li>    </ul>
   </div>
   <div class="right-hot">
-    <a target="_blank" href="http://t.imooc.com/space/teacher/id/255838"><img src="/upload/2016/03/13/56e56211c68e7.jpg" alt=""></a>
+    <a target="_blank" href="http://163.com"><img src="/upload/2016/09/08/57d16cb527dbb.jpg" alt=""></a>
   </div><div class="right-hot">
-    <a target="_blank" href="http://sports.sina.com.cn/laureus/moment2015/"><img src="/upload/2016/03/13/56e5612d525c3.png" alt=""></a>
+    <a target="_blank" href="www.baidu.com"><img src="/upload/2016/09/08/57d16bedcb74f.jpg" alt=""></a>
   </div>  
 </div>
     </div>
